2014-05-12  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_spell): Provide startup feedback, as for the linter.
	* doc/syntax/nanorc.nanorc: Show bright foreground colours as valid.
	* src/rcfile.c: Improve some comments, and remove some others that
	are mispasted or superfluous.
	* doc/texinfo/nano.texi: Add missing parenthesis, remove blank line.

2014-05-10 Chris Allegretta <chrisa@asty.org>
	* src/rcfile.c (parse_color_names): Redefine false and true to
	  their appropriate macro names so --with-slang works (slangv2 anyway).
	* src/text.c (do_linter): Care about whether user cancelled the file
	  save (cancel the operation) versus justy said no (continue but don't
	  save the file).  Also doupdate() after statusbar message that
	  linter is being invoked and blank the shortcuts to draw the eye.
	  Also allow user to cancel at the "open in a new buffer" prompt.
	  New function lint_cleanup().  Fixes Savannah bug 42203.

2014-05-10  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Make syntax highlighting into a separate
	section, and add the still missing section on rebinding keys.

2014-05-10  Mark Majeres  <mark@engine12.com>
	* src/*.h, src/*.c: Make it possible for the foreground colour of
	interface elements to be bright.

2014-05-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (get_mouseinput): Count only shortcuts that are actually
	shown, so that clicking on the ones after ^T (Speller/Linter) will work
	again correctly.  This fixes the second part of Savannah bug #42093.
	* src/global.c (shortcut_init, strtosc): Do not define nor accept
	shortcuts for functions that are disabled.
	* src/global.c (shortcut_init, strtosc): Define shortcut for the linter
	when speller is disabled, and fix compilation with --disable-speller.
	* src/global.c (shortcut_init, strtosc), doc/man/nanorc.5: Put softwrap
	back among the "Appearance" toggles.
	* doc/man/nanorc.5: Describe bindable functions in the third person.
